[package]
name = "array-box"
version = "1.0.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
repository = "https://github.com/feenkcom/value-box-rs/array-box"
license = "MIT"
keywords = ["ffi"]
description = "Create Rust vector from C data, either owned or not owned."

[dependencies]
