[package]
name = "array-box"
version = "1.0.2"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
repository = "https://github.com/feenkcom/boxes-rs/tree/main/array-box"
license = "MIT"
keywords = ["ffi"]
description = "Create Rust vector from C data, either owned or not owned."

[dependencies]
