[package]
name = "string-box"
version = "1.0.1"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
repository = "https://github.com/feenkcom/boxes-rs/tree/main/string-box"
license = "MIT"
keywords = ["ffi"]
description = "Create Rust string from UTF-8 string, byte string or wide string."

[dependencies]
widestring = { version = "1.0", optional = true }