[package]
name = "value-box-ffi"
version = "1.0.1"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
repository = "https://github.com/feenkcom/boxes-rs/tree/main/value-box-ffi"
license = "MIT"
keywords = ["ffi"]
description = "Provides C-like api to family of value-box crates"

[dependencies]
value-box = { version = "2" }
array-box = { version = "1", optional = true }
geometry-box = { version = "1", optional = true }
string-box = { version = "1", optional = true }
phlow = { version = "1", optional = true, features = [ "phlow-derive" ] }
phlow-extensions = { version = "1", optional = true }
crossbeam = { version = "0.8", optional = true }

[features]
phlow = [ "dep:phlow", "phlow-extensions", "value-box/phlow" ]
array-box = [ "dep:array-box", "crossbeam" ]
geometry-box = [ "dep:geometry-box" ]
string-box = [ "dep:string-box" ]
value-box = [ ]