[package]
name = "value-box"
version = "1.0.0"
authors = ["feenk gmbh <contact@feenk.com>"]
edition = "2021"
repository = "https://github.com/feenkcom/value-box-rs/value-box"
license = "MIT"
keywords = ["ffi"]
description = "Allows developers to pass Rust-allocated structures over ffi."

[dependencies]
log = "0.4"
thiserror = "1.0"
user-error = "1.2"
anyhow = { version = "1.0", optional = true }